# Bollard

./: .env.example  .gitignore  AGENTS.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  pyproject.toml
docs/: package-lock.json  package.json
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/app/docs/: layout.tsx  page.tsx
docs/src/app/docs/compression/: page.tsx
docs/src/app/docs/connections/: page.tsx
docs/src/app/docs/feedback/: page.tsx
docs/src/app/docs/gates/: page.tsx
docs/src/app/docs/profiler/: page.tsx
docs/src/app/docs/reference/: page.tsx
docs/src/app/docs/safety/: page.tsx
docs/src/app/docs/ssl/: page.tsx
docs/src/app/enterprise/: page.tsx
docs/src/components/: PlaceholderImage.tsx
src/bollard_mcp/: config.py  server.py
src/bollard_mcp/adapters/: base.py  sqlalchemy_adapter.py
src/bollard_mcp/credentials/: __init__.py  encrypted_store.py  keyring_store.py
src/bollard_mcp/formatters/: markdown.py
src/bollard_mcp/middleware/: permissions.py
src/bollard_mcp/safety/: intent_validator.py  validator.py
src/bollard_mcp/state/: session.py
src/bollard_mcp/tools/: connections.py  feedback.py  profiler.py  query.py  schema.py
vscode-extension/: README.md  extension.js  package.json
